Changes in version 1.0-18:

* Added a function (notablyDifferent) to use a consistent method to identify 
observations with large error. 
* Added an function to (plot.notablyDifferent) to plot the data from notablyDifferent().

Changes in version 1.0-17:

* Replaced deprecated calls to sd(<matrix>|<data.frame>) and mean(<matrix>|<data.frame>) with apply().
* Commented out use of cout in ANN routines.
* Added a function (correctBias) to check for bias and correct it by finding different neighbors.
* Added an option to notablyDistant() to compute the threshold using quantile().
* Changed Crookston's email address.

Changes in version 1.0-16:

* Fixed and moved this news files.
* Fixed long standing error in the way Mahalanobis distances are computed
(thanks to Petteri Packalen)
* Fixed the use of "useid" in AsciiGridImpute and modified the help pages
to make it more clear.
* Removed the provisional use of a modified versions of randomForest.default as
the stock version meets the needs. Also removed, for the same reason, a 
modified version predict.cca.
* Removed the long-deprecated "addXlevels" as it is no longer needed with newer 
versions of randomForest.

Changes in version 1.0-15:

* The update to ANN headers were reapplied.

Changes in version 1.0-14:

* Fixed typos in yai.Rd
* Added to the ability to pick neighbors at random among 1:k nearest in
  function foruse().
* Updated ANN headers for newer gcc

Changes in version 1.0-13:

* Bug fix in unionDataJoin that effects non-yaImpute uses of this function
* Fixed AsciiGridImpute to better deal with NA's generated when ancillary
  data are being mapped.
* Fixed errorStats to deal with case where rmsd can not be computed due
  to missing data.
* Added drop=FALSE to deal with case where only one variable is left in
  the computations of rmsd after variables with no observed values are removed.
* Fixed some problems in the customized version of randomForest.default to
  comply with current R coding standards.