@@ -3,6 +3,7 @@ Changes in version 1.0-18:
 * Added a function (notablyDifferent) to use a consistent method to identify 
 observations with large error. 
 * Added an function to (plot.notablyDifferent) to plot the data from notablyDifferent().
+* Modified the ftest in yai() so that it correctly computes the number of canonical variates.
 
 Changes in version 1.0-17:
 
